Prevent content overflow

--- a/assets/styles/layout/layout.scss
+++ b/assets/styles/layout/layout.scss
@@ -12,6 +12,7 @@ main {
 
 .container {
   margin: auto;
+  overflow-wrap: break-word;
 }
 
 section:before {
